@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-8.3,v 1.1.2.129 2022/05/17 10:35:22 bouyer Exp $
+# $NetBSD: CHANGES-8.3,v 1.1.2.130 2022/05/17 12:12:38 bouyer Exp $
 
 A complete list of changes from the NetBSD 8.2 release to the NetBSD 8.3
 release:
@@ -2599,4 +2599,14 @@ share/man/man4/mfi.4				1.13
 	- Improve debug printf()s.
 	- KNF. Remove extra semicolon. Whitespace fixes.
 	[msaitoh, ticket #1742]
+
+libexec/mail.local/mail.local.c			1.29
+
+	fix local privilege escalation due to a race condition
+
+	NetBSD-SA2016-006 included an incomplete fix for CVE-2016-6253,
+	a local privilege escalation vulnerability in mail.local(8).
+
+	Thanks to Jan Schaumann for bringing this to our attention.
+	[kre, ticket #1743]
 
